2008-09-07  Chris Sutcliffe  <ir0nh34d@users.sf.net>

	* include/w32api.h: Increment version to 3.12.
	* Makefile.in: Ditto.

2008-09-07  Michael Hentschel  <mikeh42@users.sourceforge.net>

	* include/shlwapi.h (STIF_DEFAULT, STIF_SUPPORT_HEX): Define.

2008-09-07  alsemm  <alsemm@users.sourceforge.net>

	* include/mlang.h (IMLangFontLink2::MapFont): Fix definition.

2008-09-07  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/ws2tcpip.h (IPV6_MREQ): Fix typo.
	Thanks to Richard Hughes for report.

2008-09-06  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	* Makefile.in: Adjust to new naming standard for MinGW while maintaining old
	naming standard for Cygwin.

2008-08-30 Bo Yang <techrazy@users.sourceforge.net>

	* include/sspi.h: Fix PSecurityFunctionTableW structure.

2008-08-29  Andy Grover  <andy.grover@oracle.com>

	* include/ddk/scsi.h: Define READ_TOC formats.
	* lib/ddk/scsiport.def (ScsiPortGetDeviceBase): Fix export.

2008-08-29  Andy Grover  <andy.grover@oracle.com>

	* include/ddk/ndis.h (NDIS_MINIPORT_MAJOR_VERSION, NDIS_MINIPORT_MINOR_VERSION,
	struct NDIS_TASK_OFFLOAD_HEADER, PROTOCOL_RESERVED_SIZE_IN_PACKET,
	NdisGetFirstBufferFromPacketSafe, NdisMIndicateReceivePacket,
	NdisSetPacketPoolProtocolId, NdisMInitializeTimer, NdisMSetPeriodicTimer,
	NdisMCancelTimer): Define.
	(enum NDIS_ENCAPSULATION, struct NDIS_ENCAPSULATION_FORMAT): move in file.
	(struct _NDIS_PACKET): Define using _ANONYMOUS_UNION and ANONYMOUS_STRUCT to
	eliminate warnings.
	(NdisReinitializePacket): Rename from NdisReinitializePacketCounts.
	* lib/ddk/ndis.def (NdisInitAnsiString, NdisInitUnicodeString, NdisMCancelTimer,
	NdisMInitializeTimer, NdisMSetPeriodicTimer, NdisSetPacketPoolProtocolId):
	Export.

2008-08-29  Andy Grover  <andy.grover@oracle.com>

	* include/ddk/winddk.h (RtlStringCbCopyA, RtlStringCbPrintfA,
	RtlStringCbVPrintfA): define in terms of POSIX string functions.

2008-08-29  Andy Grover  <andy.grover@oracle.com>
