@@ -58,7 +58,7 @@ typedef struct _DLLVERSIONINFO2
          ((ULONGLONG)(  qfe) <<  0))
 
 typedef enum {
-    ASSOCSTR_COMMAND,
+    ASSOCSTR_COMMAND = 1,
     ASSOCSTR_EXECUTABLE,
     ASSOCSTR_FRIENDLYDOCNAME,
     ASSOCSTR_FRIENDLYAPPNAME,
@@ -67,7 +67,16 @@ typedef enum {
     ASSOCSTR_DDECOMMAND,
     ASSOCSTR_DDEIFEXEC,
     ASSOCSTR_DDEAPPLICATION,
-    ASSOCSTR_DDETOPIC
+    ASSOCSTR_DDETOPIC,
+    ASSOCSTR_INFOTIP
+#ifdef _WIN32_IE >= 0x0600
+    ,
+    ASSOCSTR_QUICKTIP,
+    ASSOCSTR_TILEINFO,
+    ASSOCSTR_CONTENTTYPE,
+    ASSOCSTR_DEFAULTICON,
+    ASSOCSTR_SHELLEXTENSION
+#endif
 } ASSOCSTR;
 typedef enum
 {
