@@ -1,3 +1,7 @@
+2008-09-11  Chris Sutcliffe  <ir0nh34d@users.sf.net>
+
+	* include/shlwapi.h (ASSOCSTR): Update enum.
+
 2008-09-07  Chris Sutcliffe  <ir0nh34d@users.sf.net>
 
 	* include/w32api.h: Increment version to 3.12.
